--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ img {
 
 .header-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 15px 0;
 }
@@ -115,23 +115,79 @@ img {
   font-size: 1.8rem;
   font-weight: 700;
   color: var(--primary-color);
+  display: flex;
+  align-items: center;
+}
+
+.logo a {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.logo-img {
+  height: 40px;
+  width: auto;
+  margin-right: 10px;
+}
+
+.logo-text {
+  font-size: 1.2rem;
+  font-weight: 700;
+  line-height: 1.2;
+}
+
+.logo-subtitle {
+  font-size: 0.7rem;
+  color: #666;
+  font-weight: normal;
+  margin-top: 2px;
+}
+
+@media (max-width: 992px) {
+  .logo-text {
+    font-size: 1rem;
+  }
+  
+  .logo-subtitle {
+    font-size: 0.6rem;
+  }
+}
+
+.nav-container {
+  background-color: var(--primary-color);
+  padding: 10px 0;
 }
 
 .nav-menu {
   display: flex;
+  justify-content: center;
+}
+
+.nav-list {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
 }
 
 .nav-item {
-  margin: 0 15px;
+  margin: 0 25px;
+  list-style: none;
 }
 
 .nav-link {
   font-weight: 500;
   position: relative;
+  color: white;
+  font-size: 1.05rem;
+  letter-spacing: 0.5px;
+  padding: 5px 0;
+  display: block;
 }
 
 .nav-link:hover, .nav-link.active {
-  color: var(--primary-color);
+  color: #ffff00;
 }
 
 .nav-link.active::after {
@@ -139,14 +195,16 @@ img {
   display: block;
   width: 100%;
   height: 2px;
-  background-color: var(--primary-color);
+  background-color: #ffff00;
   position: absolute;
-  bottom: -5px;
+  bottom: -2px;
   left: 0;
 }
 
 .get-quote {
-  margin-left: 20px;
+  position: absolute;
+  right: 20px;
+  top: 10px;
 }
 
 .mobile-toggle {
@@ -240,6 +298,10 @@ img {
   .section-title {
     font-size: 2rem;
   }
+  
+  .nav-item {
+    margin: 0 15px;
+  }
 }
 
 @media (max-width: 768px) {
@@ -249,18 +311,23 @@ img {
   
   .mobile-toggle {
     display: block;
+    position: absolute;
+    right: 15px;
+    top: 15px;
+  }
+  
+  .nav-container {
+    padding: 0;
   }
   
   .nav-menu {
     display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    background-color: var(--white);
+  }
+  
+  .nav-list {
     flex-direction: column;
-    box-shadow: var(--shadow);
-    padding: 20px 0;
+    background-color: var(--primary-color);
+    padding: 10px 0;
   }
   
   .nav-menu.active {
@@ -273,7 +340,8 @@ img {
   }
   
   .get-quote {
-    margin: 15px auto 0;
+    position: static;
+    margin: 15px auto;
     display: block;
     width: 80%;
   }
