修复技术合作页面：1.更新页头底图路径为技术合作.png 2.修复政府补贴锚点链接不匹配问题

--- a/css/cases.css
+++ b/css/cases.css
@@ -116,7 +116,7 @@ body {
 /* 页面横幅 */
 .page-banner {
   height: 400px;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url('../技术合作底图.png');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url('../技术合作.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
